fix contrast

--- a/app/assets/stylesheets/commons/_links.sass
+++ b/app/assets/stylesheets/commons/_links.sass
@@ -3,9 +3,9 @@ a[target="_blank"]::after
     background-size: contain
     content: ""
     display: inline-block
-    filter: invert(.5)
     height: 0.8rem
     margin: 0 0.05rem 0 0.1rem
     vertical-align: -1px
     width: 0.8rem
-    filter: invert(1)
+    &.btn-primary, &.btn-danger
+        filter: invert(1)
